変数名の変更など

--- a/webpack/src/index.html
+++ b/webpack/src/index.html
@@ -14,7 +14,7 @@
         height="300"
       />
       <img
-        src="./images/sample2.jpg"
+        src="./images/sample2.jpg?as=webp"
         alt="サンプル画像2"
         width="400"
         height="300"
